fix css visual bug on mobile (#1513)
.tablist .button "width" isn't good on mobile 
how it currently looks: http://prntscr.com/sdygem
how it should look: http://prntscr.com/sdygnr

--- a/style/client.css
+++ b/style/client.css
@@ -603,6 +603,7 @@ span.header-username:hover {
 	box-shadow: inset 0 0px 2px rgba(255,255,255,1);
 	font-size: 11pt;
 	padding: 4px 28px 4px 6px;
+	width: 120px;
 	height: 18px;
 	text-align: left;
 	border-radius: 0;
